--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -66,6 +66,55 @@ button
 label
   margin-bottom: 0.25rem
 
+.small,
+small
+  font-size: 88%
+
+.divider
+  margin-top: 1.66rem
+  margin-bottom: 2.55rem
+  border-color: $border-color
+
+.list
+  &-numbered
+    padding-left: 0
+    list-style-type: none
+    counter-reset: num
+    & > li
+      position: relative
+      padding-left: 1.25rem
+      &:not(:last-child)
+        margin-bottom: 2rem
+      &:before
+        counter-increment: num
+        content: counter(num) '.'
+        position: absolute
+        top: 0
+        left: 0
+        max-width: 1rem
+        font-weight: 600
+        font-size: 1.11rem
+        white-space: nowrap
+        text-overflow: ellipsis
+        overflow: hidden
+  &-dashed
+    padding-left: 0
+    list-style-type: none
+    & > li
+      position: relative
+      padding-left: 1.5rem
+      &:not(:last-child)
+        margin-bottom: 0.5rem
+      &:before
+        content: '—'
+        position: absolute
+        top: 0
+        left: 0
+        max-width: 1rem
+        white-space: nowrap
+        text-overflow: ellipsis
+        overflow: hidden
+
 a,
 .link,
 .link.h1,
@@ -77,7 +126,6 @@ a,
   color: $link
   text-decoration: none
   text-overflow: ellipsis
-  overflow: hidden
   &:hover,
   &:focus
     color: $text
@@ -90,9 +138,10 @@ a,
     text-decoration: none
 
 .link
+  &-dashed
+    border-bottom: 1px dashed !important
   &-light
     color: $white
-    text-decoration: underline
     &:hover,
     &:focus,
     &:active
@@ -132,6 +181,10 @@ a,
 .bg
   &-main
     background: $main-gradient
+    &-transparent
+      background-image: linear-gradient(to left, transparentize(#5d91f1,0.9), transparentize(#29bfb6,0.9))
+  &-gray
+    background-color: $gray
 
 h1,
 .h1,
@@ -150,10 +203,10 @@ h6,
   font-weight: 400
   line-height: 1.25
   text-overflow: ellipsis
-  overflow: hidden
 
 h1,
 .h1
+  margin-bottom: 3.38rem
   font-size: 3.88rem
   font-weight: 600
   +md-down
@@ -195,23 +248,22 @@ h5,
   font-size: 1.33rem
   +md-down
     font-size:  1.22rem
-  +xs
-    font-size: 1.11rem
 
 h6,
 .h6
   font-size: 1.22rem
-  +xs
-    font-size: 1rem
 
 .h7
   font-size: 1rem
   +xs
     font-size: 1.11rem
 
-small,
-.small
-  font-size: 88%
+[class*=" border-"],
+[class^=border-]
+  border-color: $border-color !important
+
+.rounded
+  border-radius: $border-radius !important
 
 .flex-centered
   display: flex
@@ -241,6 +293,13 @@ small,
   +xl-up
     flex: 0 0 20%
     max-width: 20%
+
+.column
+  &-count
+    &-lg
+      +lg-up
+        &-2
+          column-count: 2
 
 .sitemap
   h1,
@@ -379,11 +438,15 @@ button.close
   border-radius: 0
 
 .map
-  min-height: 20rem
+  min-height: 27.22rem
   height: 100%
-  background-color: darken($white, 15%)
+  background-color: $gray
+  border-radius: $border-radius
+  overflow: hidden
+  +md-down
+    min-height: 23.33rem
   +xs
-    min-height: 15rem
+    min-height: 18.75rem
 
 .navbar
   &-toggler
@@ -392,31 +455,54 @@ button.close
     border-radius: 0
 
 .nav
-  &-pills
+  &-pills,
+  &-tabs
     position: relative
     flex-wrap: nowrap
-    padding: 0 0 0.75rem
+    width: 100%
+    max-width: 100%
+    padding: 0
     overflow-x: auto
     overflow-y: hidden
     &-wrap
-    .nav-item
-      &:not(:last-child)
-        margin-right: 0.25rem
-    .nav-link
-    .nav-link.active,
-    .show > .nav-link
-        position: relative
-        color: $white
-        background-color: $main
+      @extend .overflow-overlay
+      position: relative
+      z-index: 1
+      max-width: 100%
+      +lg-up
         &:after
-          content: ''
-          position: absolute
-          top: 100%
-          left: 1rem
-          width: 0
-          height: 0
-          border: 0.35rem solid transparent
-          border-top-color: $main
+          display: none
+      &-card
+        padding: 0 $border-radius
+        margin-bottom: -1px
+    .nav-item
+      &:last-child
+        .nav-link
+            &:after
+              display: none
+      &.show
+        .nav-link
+          color: $text
+          border-color: $border-color
+    .nav-link
+      position: relative
+      border-radius: $border-radius $border-radius 0 0
+      &:after
+        content: ''
+        position: absolute
+        top: 0
+        right: -1px
+        bottom: 0
+        width: 1px
+        margin: auto
+        height: 1.25rem
+        background-color: $border-color
+      &:hover,
+      &:focus
+        border-color: $border-color
+      &.active
+        color: $text
+        border-color: $border-color
 
 .dropdown
   &-toggle
@@ -424,7 +510,7 @@ button.close
       margin-left: 0.5rem
   &-menu
     z-index: 2
-    border-radius: $border-radius
+    border-radius: 0
   &-item
     max-width: 100%
     padding-left: 0.75rem
@@ -637,9 +723,8 @@ select.form-control
   background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") right .5rem center / 0.5rem no-repeat, linear-gradient(to bottom, darken($white, 5%) 0%, darken($white, 0%) 100%)
 
 .card
-  border: none
+  border-color: $border-color
   border-radius: $border-radius
-  box-shadow: $shadow
   & > *
     &:first-child
       border-radius: $border-radius $border-radius 0 0
@@ -963,9 +1048,18 @@ select.form-control
         padding-top: 8.88rem
         background: $gray url(../img/page-bg-3.png) center top no-repeat
         +md-down
-          padding-top: 3rem
+          padding-top: 4.5rem
           padding-bottom: 43%
           background-image: url(../img/page-bg-3-tablet.png)
+          background-position: center bottom
+          background-size: 100% auto
+      &-4
+        padding-top: 7.66rem
+        background: $gray url(../img/page-bg-4.jpg) center top no-repeat
+        +md-down
+          padding-top: 4.5rem
+          padding-bottom: 73%
+          background-image: url(../img/page-bg-4-tablet.jpg)
           background-position: center bottom
           background-size: 100% auto
     &-title
@@ -1056,10 +1150,10 @@ select.form-control
     margin-bottom: 1rem
     background-color: $gray
     &:after
-      display: none
-    +md-down
+      background-image: linear-gradient(to right, rgba(245, 246, 248, 0), $gray)
+    +lg-up
       &:after
-        display: block
+        display: none
   &-item
     white-space: nowrap
     &:not(:last-child)
@@ -1096,6 +1190,9 @@ select.form-control
     &.square
       &:before
         padding-top: 100%
+    &.rectangle-1x1_8
+      &:before
+        padding-top: 55.963%
     &.rectangle-1x2
       &:before
         padding-top: 50%
@@ -1430,6 +1527,55 @@ select.form-control
       transform: none
       &:not(:last-child)
         margin-right: 0.5rem
+  &-view
+    &-controls
+      +lg-down
+        padding: 0 2rem
+      &-arrow
+        font-size: 0.77rem
+        color: $link
+        opacity: 1
+        &:hover,
+        &:focus
+          color: $text
+        [class*=" icon-"],
+        [class^=icon-]
+          font-weight: 700
+      &-prev
+        left: 0
+      &-next
+        right: 0
+      &-stage
+        max-width: none
+        overflow: hidden
+      .owl-item
+        flex-shrink: 0
+  &-imgs
+    &-prev
+      left: 0
+    &-next
+      right: 0
+  &-thumbnails
+    padding: 0 22%
+  &-thumbnail
+    position: relative
+    padding: 0.25rem
+    border-radius: $border-radius / 2
+    overflow: hidden
+    &:after
+      content: ''
+      position: absolute
+      top: 0
+      left: 0
+      right: 0
+      bottom: 0
+      background-image: $main-gradient
+      opacity: 0
+      +transition
+    &:hover,
+    &.active
+      &:after
+        opacity: 0.6
 
 .banner
   padding-top: 8.02%
@@ -1472,6 +1618,23 @@ select.form-control
       margin-bottom: 1.44rem
 
 .product
+  &-badge
+    @extend .text-truncate
+    position: absolute
+    top: -0.125rem
+    right: -0.125rem
+    width: 1.11rem
+    height: 1.11rem
+    padding: 0.255rem 0.1rem
+    color: $white
+    font-weight: 900
+    font-size: 0.55rem
+    line-height: 1
+    text-align: center
+    background-image: $third-gradient
+    border-radius: 50%
+    &-wrap
+      position: relative
   &-price
     font-weight: 600
     font-size: 1.5rem
@@ -1577,29 +1740,31 @@ select.form-control
         padding-left: 1rem
         padding-right: 1rem
         color: $white
-        background-color: transparentize($black, 0.2)
+        background-color: $main
+        &:hover
+          & ~ .search-btn
+            color: $white
+            background-color: $main
         & ~ .search-btn,
         & ~ .search-reset
           width: 25%
-          color: transparentize($white, 0.5)
-          background-color: transparentize($black, 0.2)
+          color: $white
+          background-color: $main
+          border-color: darken($main, 2%)
           &:hover,
           &:focus
             color: $white
+            background-color: darken($main, 2%)
         & ~ .search-btn
-          border-right: 1px solid transparentize($white, 0.5)
+          border-right: 1px solid
         & ~ .search-reset
-          border-left: 1px solid transparentize($white, 0.5)
-        &:hover
-          & ~ .search-btn
-            background-color: transparentize($black, 0.2)
+          border-left: 1px solid
       &:hover
         & ~ .search-btn
           color: $white
           background-color: transparentize($black, 0.75)
       &::placeholder
         color: $white
-
 
 .chart
   position: relative
@@ -1610,11 +1775,11 @@ select.form-control
     +inertial-scroll
   &-wrap
     @extend .overflow-overlay
+    &:after
+      background-image: linear-gradient(to right, rgba(245, 246, 248, 0), $gray)
     +lg-up
       &:after
         display: none
-    &:after
-      background-image: linear-gradient(to right, rgba(245, 246, 248, 0), #f5f6f8)
   &-bar
     position: absolute
     top: 3.9rem
@@ -1871,3 +2036,33 @@ button.mobile-control
   &:focus
     color: $white
     background-color: transparentize($black, .75)
+
+.view
+  &-control
+    display: flex
+    align-items: center
+    font-weight: 400
+    +xs
+      justify-content: center
+    &-icon
+      &-wrap
+        display: flex
+        align-items: center
+        justify-content: center
+        width: 2.22rem
+        height: 2.22rem
+        flex-shrink: 0
+        margin-right: 0.77rem
+        background-color: $gray
+        border-radius: 50%
+    &-title
+      font-size: 0.77rem
+      text-transform: uppercase
+    &.active
+      .view-control-icon-wrap
+        color: $white
+        background-image: $main-gradient
+    &-colored
+      .view-control-icon-wrap
+        color: $white
+        background-image: $second-gradient
