--- a/assets/fonts/icomoon/style.css
+++ b/assets/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?q0c7we');
-  src:  url('fonts/icomoon.eot?q0c7we#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?q0c7we') format('truetype'),
-    url('fonts/icomoon.woff?q0c7we') format('woff'),
-    url('fonts/icomoon.svg?q0c7we#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?c8kvno');
+  src:  url('fonts/icomoon.eot?c8kvno#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?c8kvno') format('truetype'),
+    url('fonts/icomoon.woff?c8kvno') format('woff'),
+    url('fonts/icomoon.svg?c8kvno#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
