--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -7,7 +7,7 @@ $main: #6a86ff
 $second: #1ccaa7
 $main-gradient: linear-gradient(to right, $main, $second)
 $main-gradient-reverse: linear-gradient(to left, $main, $second)
-$second-gradient: linear-gradient(45deg, #ffa66a, #fb3d6e)
+$second-gradient: linear-gradient(to right, #ffa66a, #fb3d6e)
 $third-gradient: linear-gradient(-225deg, #fbcc3d, #ffa66a)
 $lining: $white
 $text: #65707d
