--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -13,7 +13,7 @@ $lining: $white
 $text: #65707d
 $link: #5895eb
 
-$outline-color: complement($main)
+$outline-color: $second
 
 $border-color: #e6e8ec
 $border-radius: 0.55rem
