--- a/assets/sass/_libs.sass
+++ b/assets/sass/_libs.sass
@@ -1,2 +1,3 @@
 @import '../libs/css/bootstrap.min.scss'
 @import '../libs/css/owl.carousel.min.scss'
+@import '../libs/css/jquery.fancybox.min.scss'
