--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -3,10 +3,6 @@
 @import "_fonts"
 @import "_mixins"
 
-*
-  &:focus
-    outline: 1px solid $outline-color
-
 html
   display: flex
   flex-direction: column
@@ -61,7 +57,6 @@ button
   color: $text
   &:focus
     z-index: 1
-    outline: 1px solid $outline-color
 
 label
   margin-bottom: 0.25rem
@@ -216,7 +211,7 @@ h3,
 
 h4,
 .h4
-  margin-bottom: 2.5rem
+  margin-bottom: 2.3888rem
   font-weight: 300
   font-size: 1.44rem
   +md-down
@@ -259,7 +254,7 @@ h6,
   align-items: center
 
 .container
-  max-width: 1200px
+  max-width: 1231px
   padding-right: 1.66rem
   padding-left: 1.66rem
   +xs
@@ -305,21 +300,31 @@ h6,
   display: block
   visibility: hidden
   +inertial-scroll
+  &-full
+    .modal-dialog
+      max-width: 100%
+      flex-direction: column
+      padding: 0
+    .modal-content
+      flex-grow: 1
+      background-color: $lining
+      border-radius: 0
   &-dialog
-    max-width: 60%
-    width: 100%
     min-height: 100%
     display: flex
     align-items: center
     justify-content: center
     margin: 0 auto
     padding: 1.5rem
+    +xs
+      padding: 0.5rem
   &-content
     height: auto
     border: none
-    border-radius: $border-radius
-    overflow: hidden
     +transition
+  &-xl
+    +md-down
+      max-width: 100%
   &-header,
   &-body,
   &-footer
@@ -336,36 +341,54 @@ h6,
       position: absolute
       margin: 0
       padding: 0.2rem 0.5rem
+  &-body
+    +xs
+      padding: 1.5rem 0.75rem
   &-footer
     padding-top: 0
   .alert-heading
     margin-bottom: 0
+  .alert
+    color: $text
+    background-color: $white
+    border: none
+    border-radius: $border-radius
+    +transition
+    &-dismissible
+      padding-right: 1.25rem
+      .close
+        padding: 0.1rem 0.5rem
+    hr
+      border-color: $border-color
   &.fade
     opacity: 1
     &:not(.show)
       .modal-dialog
         transform: none
-      .modal-content
+      .modal-content,
+      .alert
         opacity: 0
         transform: scale(1.05)
   &.show
     visibility: visible
-    .modal-content
+    .modal-content,
+    .alert
       opacity: 1
       transform: scale(1)
 
 button.close
   position: absolute
-  top: 0.25rem
-  right: 0.25rem
+  top: 0
+  right: 0
   z-index: 1
-  padding: 0.25rem 0.5rem
+  padding: 0.1rem 0.5rem
   margin: 0
   font-weight: 300
-  font-size: 1rem
+  font-size: 2em
   line-height: 1
   font-family: serif
-  background-color: transparent
+  background-color: darken($white, 20%)
+  border-top-right-radius: $border-radius
   opacity: 0.5
 
 .fancybox-share__button
@@ -529,7 +552,7 @@ button.close
 .btn
   max-width: 100%
   min-width: 11.11rem
-  padding: 1.15rem
+  padding: 1.2222rem 1.3333rem
   font-weight: 600
   line-height: 1
   color: $text
@@ -543,13 +566,9 @@ button.close
     color: $link
   &:focus
     box-shadow: none
-    outline: 1px solid $outline-color
   &:active
     outline: none
     box-shadow: $shadow-active
-  [class*=" icon-"],
-  [class^=icon-]
-    font-size: 0.77rem
   +xs
     font-size: 1.11rem
   &-lg
@@ -577,12 +596,17 @@ button.close
       background: $main-gradient
       border-radius: $border-radius - 0.1rem
       +transition
+    [class*=" icon-"],
+    [class^=icon-]
+      font-size: 0.77rem
   &-link
     padding: 0
     font-weight: 600
     background-color: transparent
     border: none
   &-outline
+    min-width: 16.7222rem
+    font-weight: 400
     color: $white
     background-color: transparent
     border: 2px solid $white
@@ -595,6 +619,11 @@ button.close
       color: $main
       background-color: darken($white, 5%)
       border-color: $white
+    [class*=" icon-"],
+    [class^=icon-]
+      font-size: 0.77rem
+    &-mini
+      min-width: auto
     &-main
       min-width: 7.77rem
       padding-top: 0.88rem
@@ -648,10 +677,10 @@ button.close
     margin-bottom: 2.22rem
   &-control
     height: auto
-    padding: 1.11rem 0.5rem
+    padding: 1.11rem 0
     font-size: 1.22rem
     line-height: 1
-    color: $white
+    color: inherit
     white-space: nowrap
     text-overflow: ellipsis
     background-color: transparent
@@ -665,19 +694,19 @@ button.close
     &:focus
       position: relative
       z-index: 0
-      color: $white
+      color: inherit
       background: transparent
-      border-color: $white
+      border-color: inherit
       box-shadow: none
-      outline: 1px solid $outline-color
     &:focus,
     &:valid
       & + .form-control-placeholder
+        padding: 0.5rem 0
         transform: translateY(-80%) scale(0.8)
     &-placeholder
       position: absolute
       top: 0
-      padding: 1.22rem 0.5rem
+      padding: 1.22rem 0
       margin: 0
       font-weight: 400
       font-size: 1.33rem
@@ -746,7 +775,6 @@ button.close
         & ~ .custom-control-label
           &:before
             box-shadow: none
-            outline: 1px solid $outline-color
       &:not(:disabled):active
         & ~ .custom-control-label
           &:before
@@ -916,7 +944,7 @@ select.form-control
     .card-header,
     .card-body,
     .card-footer
-      padding: 1.33rem
+      padding: 25px 25px 34px
     [class*=" icon-"],
     [class^=icon-]
       font-size: 1.55rem
@@ -937,9 +965,12 @@ select.form-control
           border-radius: 0 0 $border-radius $border-radius
     +xs
       max-width: 16.875rem
+    &-title
+      margin-bottom: 3px
     &-btn
       min-width: auto
       width: 100%
+      padding: 18px 18px 23px
       color: $link
       border-radius: 0 0 $border-radius $border-radius
       &:after
@@ -948,15 +979,15 @@ select.form-control
       display: inline-flex
       align-items: center
       justify-content: center
-      width: 2.5rem
-      height: 2.5rem
+      width: 2.2222rem
+      height: 2.2222rem
       font-size: 0.885rem
       background-color: $gray
       border-radius: 50%
     .card-header,
     .card-footer,
     .card-body
-      padding: 0.75rem
+      padding: 0.5rem 0.5rem 17px
       background-color: $white
     .card-body
       display: flex
@@ -979,8 +1010,11 @@ select.form-control
             border-radius: 0
       .card-header
         position: relative
+        padding: 19px 30px 19px 29px
         border-bottom: none
         background-color: transparent
+      .card-body
+        padding-bottom: 1.2222rem
       .btn-collapse-toggler
         display: flex
         align-items: center
@@ -1004,7 +1038,7 @@ select.form-control
             border-radius: 0
         &-show,
         &-hide
-          margin-right: 0.5rem
+          margin-right: 10px
           +xs
             display: none
         &-hide
@@ -1031,8 +1065,10 @@ select.form-control
       +xs
         margin-left: -1.11rem
         margin-right: -1.11rem
+    &-title
+      margin-bottom: 6px
     &-img
-      margin-right: 1rem
+      margin-right: 1.5555rem
       +xs
         flex-shrink: 0
         width: 50px
@@ -1044,12 +1080,16 @@ select.form-control
     box-shadow: none
     border: 1px solid
     .card-body
-      padding: 1.5rem
+      padding: 23px 40px 31px 28px
     [class*=" icon-"],
     [class^=icon-]
       position: absolute
-      top: 0.55rem
-      right: 0.55rem
+    .icon-plus
+      top: 10px
+      right: 8px
+    .icon-minus
+      top: 9px
+      right: 18px
   &-green
     color: $green
     border-color: transparentize($green, 0.4)
@@ -1071,12 +1111,16 @@ select.form-control
       position: absolute
       z-index: -1
       top: 0.55rem
-      left: 0.55rem
+      left: 12px
       width: 100%
       height: 100%
       background-color: transparent
       border: 1px solid $white
       border-radius: $border-radius
+    .card-header,
+    .card-body,
+    .card-footer
+      padding: 50px 51px 36px
 
 .page
   &-wrapper
@@ -1127,6 +1171,8 @@ select.form-control
       &-in
         +lg-up
           transform: translateY(100%)
+  &-main
+    overflow: hidden
   &-footer
     padding: 2rem 0
     margin-top: auto
@@ -1134,15 +1180,15 @@ select.form-control
       font-size: 0.875rem
   &-section
     &:not(:last-child)
-      margin-bottom: 6rem
+      margin-bottom: 5.7222rem
     +md-down
       &:not(:last-child)
         margin-bottom: 3rem
     &-colored
-      padding: 6rem 0
+      padding: 5.7222rem 0
       background-color: $gray
       +md-down
-        padding: 3rem 0
+        padding: 2.8611rem 0
       &-main
         color: $white
         background: $main-gradient
@@ -1181,6 +1227,8 @@ select.form-control
           background-position: center bottom
           background-size: 100% auto
     &-title
+      margin-bottom: 2.8888rem
+    &-subtitle
       margin: 0
       padding: 0 1.66rem
       margin-left: -1.66rem
@@ -1195,8 +1243,7 @@ select.form-control
         position: relative
         display: flex
         z-index: 0
-        margin-bottom: 2rem
-        overflow: hidden
+        margin-bottom: 1.5555rem
         &:after,
           content: ""
           position: absolute
@@ -1238,7 +1285,6 @@ select.form-control
       color: $main
       background-color: transparent
       box-shadow: none
-      outline: 1px solid $outline-color
     &:active
       color: $text
     &.disabled
@@ -1306,6 +1352,12 @@ select.form-control
     &.square
       &:before
         padding-top: 100%
+    &.rectangle-product-card
+      &:before
+        padding-top: 80.5%
+    &.rectangle-catalog
+      &:before
+        padding-top: 88%
     &.rectangle-1x1_8
       &:before
         padding-top: 55.963%
@@ -1343,7 +1395,7 @@ select.form-control
 
 .menu
   display: flex
-  padding: 1.38rem 0
+  padding: 17px 0 24px
   margin-right: 1.5rem
   margin-bottom: 0
   list-style-type: none
@@ -1384,14 +1436,14 @@ select.form-control
     display: flex
     align-items: center
     justify-content: center
-    padding-right: 1.38rem
-    margin-right: 1.38rem
+    padding-right: 25px
+    margin-right: 23px
     &:after
       content: ''
       position: absolute
       z-index:
-      top: -0.22rem
-      bottom: -0.22rem
+      top: 5px
+      bottom: 0
       right: 0
       width: 1px
       background-color: $border-color
@@ -1410,11 +1462,9 @@ select.form-control
     width: 100%
     max-width: 100%
     font-weight: 600
-    font-size: 1.11rem
-    line-height: 1
+    font-size: 20px
     color: $text
     text-align: left
-    white-space: nowrap
     text-overflow: ellipsis
     overflow: hidden
     &:hover,
@@ -1506,7 +1556,7 @@ select.form-control
       +lg-down
         font-size: 1rem
     &-icon
-      font-size: 2.44rem
+      font-size: 2.7rem
   &-check
     padding: 1rem
     background-color: lighten($main, 45%)
@@ -1637,8 +1687,8 @@ select.form-control
     &-nav
       position: absolute
       z-index: 1
-      top: 1.25rem
-      right: 1.25rem
+      top: 40px
+      right: 29px
       display: flex
       &.disabled
         display: none
@@ -1646,7 +1696,7 @@ select.form-control
       position: static
       transform: none
       &:not(:last-child)
-        margin-right: 0.5rem
+        margin-right: 15px
   &-view
     &-controls
       +lg-down
@@ -1701,7 +1751,7 @@ select.form-control
       display: flex
 
 .banner
-  padding-top: 8.02%
+  padding-top: 7.61954808%
   padding-bottom: 7.60416667%
   background-color: #e2e6e9
   background-position: center
@@ -1730,7 +1780,7 @@ select.form-control
     +md-down
       max-width: 100%
   &-title
-    margin-bottom: 2.16rem
+    margin-bottom: 1.5rem
     line-height: 1
     +md-down
       max-width: 70%
@@ -1740,7 +1790,7 @@ select.form-control
     +xs
       max-width: 100%
   &-subtitle
-    margin-bottom: 2.44rem
+    margin-bottom: 2.33rem
     font-weight: 300
     +md-down
       font-size: 1.11rem
@@ -1766,7 +1816,7 @@ select.form-control
       position: relative
   &-price
     font-weight: 600
-    font-size: 1.5rem
+    font-size: 1.5555rem
     +xs
       font-size: 1.75rem
     &-new
@@ -1782,8 +1832,8 @@ select.form-control
         top: 50%
         left: -0.25rem
         right: -0.25rem
-        border-bottom: 2px solid
-        transform: translateY(-50%) rotate(-12deg)
+        border-bottom: 1px solid
+        transform: translateY(-50%) rotate(-10deg)
       +xs
         font-size: 1.11rem
 
@@ -1913,7 +1963,7 @@ select.form-control
         display: none
   &-bar
     position: absolute
-    top: 3.9rem
+    top: 77px
     left: 0
     min-width: 60rem
     width: 100%
@@ -1922,6 +1972,7 @@ select.form-control
     background-color: #bbae96
     background-image: linear-gradient(to right, #70d686 0%, #70d686 17%, #ddd35f 38%, #ff8383 100%)
   &-header
+    margin-bottom: 50px
     font-weight: 600
     text-align: left
     +md-down
@@ -1934,13 +1985,13 @@ select.form-control
     &:not(:last-child)
       padding-right: 1rem
     &-1
-      min-width: 7rem
+      min-width: 6.7777rem
     &-2
       min-width: 7rem
     &-3
-      min-width: 15rem
+      min-width: 13.8888rem
     &-4
-      min-width: 15rem
+      min-width: 16.7777rem
     &-5
       min-width: 15rem
       flex-grow: 1
@@ -1955,10 +2006,10 @@ select.form-control
     align-items: center
     text-align: center
     &:not(:last-child)
-      margin-bottom: 0.66rem
+      margin-bottom: 12px
     &-item
-      width: 0.77rem
-      height: 0.25rem
+      width: 14px
+      height: 5px
       background-color: $border-color
       &:not(:last-child)
         margin-right: 1px
@@ -1979,7 +2030,7 @@ select.form-control
         background-color: #ff8383
   &-table
     display: flex
-    padding: 2.22rem 3.33rem 3.88rem
+    padding: 2.22rem 2.7222rem 3.3333rem 3.33rem
     background-color: $white
     border-radius: $border-radius
     overflow: hidden
@@ -1989,7 +2040,9 @@ select.form-control
       margin-left: -1.11rem
       margin-right: -1.11rem
     &-characteristics
-      flex-grow: 1
+      max-width: 220px
+      min-width: 220px
+      flex-basis: 220px
       display: flex
       flex-direction: column
       justify-content: flex-end
@@ -2003,10 +2056,12 @@ select.form-control
         @extend .text-truncate
         justify-content: flex-start
         align-items: flex-start
+        padding-top: 17px
         text-align: left
+        &:nth-child(2)
+          padding-top: 27px
     &-list
-      max-width: calc(100% - 12.55rem)
-      flex-basis: calc(100% - 12.55rem)
+      width: auto
     &-item
       position: relative
       padding-top: 1rem
@@ -2015,21 +2070,23 @@ select.form-control
       justify-content: center
       align-items: center
       flex-direction: column
-      min-height: 3.7rem
-      padding: 1.11rem 0
+      height: 53px
+      line-height: 1
       text-align: center
       border-top: 1px solid $border-color
       &:nth-child(2)
+        height: 83px
         border-color: transparentize($text, 0.5)
       +xs
         padding-left: 1.11rem
         padding-right: 1.11rem
       &-header
-        padding-top: 0
+        height: auto
+        padding: 0 11px 24px
         border: none
       &-size
         &-lg
-          min-height: 4.6rem
+          height: 73px
       &-disabled
         color: $border-color
   &-item
@@ -2041,10 +2098,10 @@ select.form-control
       display: flex
       align-items: center
       justify-content: center
-      width: 1.66rem
-      height: 1.66rem
+      width: 27px
+      height: 27px
       font-weight: 700
-      font-size: 1.11rem
+      font-size: 20px
       transform: translateX(-50%)
       background-color: $white
       border: 3px solid $border-color
@@ -2070,7 +2127,7 @@ select.form-control
       &-1
         color: $white
         background-color: darken(#fecf53, 10%)
-        border-color: #fecf53
+        border-color: #ffd52e
         &:before,
         &:after
           color: #fecf53
@@ -2091,13 +2148,16 @@ select.form-control
     &-img
       &-wrap
         display: block
-        margin-bottom: 1.11rem
+        width: 5.5555rem
+        height: 5.5555rem
+        margin-bottom: 15px
         padding: 1rem
         background-color: $gray
         border-radius: $border-radius
     &-title
-      height: 2.7rem
-      margin-bottom: 0.66rem
+      height: 40px
+      margin-bottom: 6px
+      line-height: 1.23
       overflow: hidden
 
 .advantage
@@ -2128,6 +2188,19 @@ select.form-control
     background-color: #65c279
   &-warning
     background-color: #efd619
+
+.review
+  &-header
+    display: flex
+    align-items: center
+    margin-bottom: 22px
+    font-style: normal
+  &-img
+    margin-right: 24px
+  &-text
+    &:before,
+    &:after
+      display: none
 
 .mobile
   &-controls
