--- a/sass/style.sass
+++ b/sass/style.sass
@@ -712,13 +712,18 @@ button.close
     appearance: none
     &[type=number]
       appearance: textfield
-    &:focus
+    &:focus,
       position: relative
       z-index: 0
       color: inherit
       background: transparent
       border-color: inherit
       box-shadow: none
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover,
+    &:-webkit-autofill:focus,
+    &:-webkit-autofill:active
+      transition: 5000s 0s
     &:focus,
     &:valid
       & + .form-control-placeholder
@@ -979,7 +984,7 @@ select.form-control
       font-size: 1.55rem
       opacity: 0.2
   &-product
-    max-width: 15rem
+    max-width: 100%
     height: 100%
     border: 1px solid $border-color
     box-shadow: none
@@ -1010,8 +1015,6 @@ select.form-control
             background: $main-gradient
             border-radius: 0 0 $border-radius $border-radius
             +transition
-    +xs
-      max-width: 16.875rem
     &-title
       margin-bottom: 3px
     &-btn
@@ -1360,6 +1363,7 @@ select.form-control
   overflow-x: auto
   overflow-y: hidden
   font-size: 0.777rem
+  +inertial-scroll
   +md-down
     white-space: nowrap
   &-wrap
@@ -1656,7 +1660,7 @@ select.form-control
     border: none
     transform: translateY(-50%)
     pointer-events: auto
-    opacity: 0.4
+    opacity: 0.7
     +transition
     &:hover,
     &:focus
@@ -1764,6 +1768,11 @@ select.form-control
       +lg-down
         padding: 0 2rem
       &-arrow
+        display: flex
+        align-items: center
+        justify-content: center
+        width: 2rem
+        height: 2rem
         color: $link
         font-size: 0.77rem
         opacity: 1
@@ -1802,6 +1811,7 @@ select.form-control
       right: 0
       bottom: 0
       background-image: $main-gradient
+      border-radius: $border-radius / 2
       opacity: 0
       +transition
     &:hover,
@@ -1867,11 +1877,11 @@ select.form-control
     right: -0.125rem
     width: 1.11rem
     height: 1.11rem
-    padding: 0.255rem 0.1rem
+    padding: 0
     color: $white
     font-weight: 900
     font-size: 0.55rem
-    line-height: 1
+    line-height: 1.15rem
     text-align: center
     background-image: $third-gradient
     border-radius: 50%
