--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -5,6 +5,7 @@ $red: #f35555
 $green: #40a957
 $main: #6a86ff
 $second: #1ccaa7
+$third: #ffa66a
 $main-gradient: linear-gradient(to right, $main, $second)
 $main-gradient-reverse: linear-gradient(to left, $main, $second)
 $second-gradient: linear-gradient(to right, #ffa66a, #fb3d6e)
