--- a/markup/sass/style.sass
+++ b/markup/sass/style.sass
@@ -82,6 +82,7 @@ small
       &:not(:last-child)
         margin-bottom: 2rem
       &:before
+        @extend .text-truncate
         counter-increment: num
         content: counter(num) '.'
         position: absolute
@@ -90,9 +91,6 @@ small
         max-width: 1rem
         font-weight: 600
         font-size: 1.11rem
-        white-space: nowrap
-        text-overflow: ellipsis
-        overflow: hidden
   &-dashed
     padding-left: 0
     list-style-type: none
@@ -102,14 +100,12 @@ small
       &:not(:last-child)
         margin-bottom: 0.5rem
       &:before
+        @extend .text-truncate
         content: '—'
         position: absolute
         top: 0
         left: 0
         max-width: 1rem
-        white-space: nowrap
-        text-overflow: ellipsis
-        overflow: hidden
 
 a,
 .link,
@@ -121,7 +117,6 @@ a,
 .link.h6
   color: $link
   text-decoration: none
-  text-overflow: ellipsis
   &:hover,
   &:focus
     color: $text
@@ -574,6 +569,7 @@ button.close
       background-color: darken($white, 5%)
 
 .btn
+  @extend .text-truncate
   max-width: 100%
   min-width: 11.11rem
   padding: 1.2222rem 1.3333rem
@@ -581,11 +577,8 @@ button.close
   line-height: 1
   color: $text
   fill: $text
-  white-space: nowrap
-  text-overflow: ellipsis
   border: none
   border-radius: $border-radius
-  overflow: hidden
   &:hover,
   &:focus
     color: $link
@@ -713,30 +706,26 @@ button.close
   &-lg
     font-size: 1.25rem
   &-truncate
+    @extend .text-truncate
     display: inline-block
     max-width: 100%
     vertical-align: top
-    white-space: nowrap
-    text-overflow: ellipsis
-    overflow: hidden
 
 .form
   &-group
     position: relative
     margin-bottom: 2.22rem
   &-control
+    @extend .text-truncate
     height: auto
     padding: 1.11rem 0
     font-size: 1.22rem
     line-height: 1
     color: inherit
-    white-space: nowrap
-    text-overflow: ellipsis
     background-color: transparent
     border: none
     border-bottom: 2px solid
     border-radius: 0
-    overflow: hidden
     appearance: none
     &[type=number]
       appearance: textfield
@@ -1413,10 +1402,8 @@ select.form-control
     font-weight: 600
     color: $text
     text-align: center
-    text-overflow: ellipsis
     background-color: transparent
     border: none
-    overflow: hidden
     &:hover
       color: $main
       background-color: transparent
@@ -1602,6 +1589,7 @@ select.form-control
       &:after
         display: none
   &-link
+    @extend .text-truncate
     display: block
     width: 100%
     max-width: 100%
@@ -1609,8 +1597,6 @@ select.form-control
     font-size: 20px
     color: $text
     text-align: left
-    text-overflow: ellipsis
-    overflow: hidden
     &:hover,
     &:focus
       position: relative
